# connman

./: .gitignore  .gitmodules  .mailmap  AUTHORS  ChangeLog  Makefile.am  Makefile.plugins  README  acinclude.m4  bootstrap-configure  configure.ac
client/: agent.c  commands.c
connman/: .gitignore  AUTHORS  Makefile.am  Makefile.plugins  README  TODO  configure.ac
connman/doc/: config-format.txt  connman-firewall.config.5.in  connman-vpn.conf.5.in  connman.conf.5.in  firewall-config-format.txt  globalproxy-api.txt  manager-api.txt  service-api.txt  vpn-agent-api.txt  vpn-config-format.txt  vpn-connection-api.txt  vpn-overview.txt
connman/gdbus/: client.c  gdbus.h  object.c
connman/gdhcp/: client.c  common.c  common.h  gdhcp.h  server.c
connman/gsupplicant/: dbus.c  dbus.h  gsupplicant.h  supplicant.c
connman/gweb/: giognutls.c  gresolv.c  gresolv.h  gweb.c  gweb.h
connman/include/: access.h  agent.h  dbus.h  device.h  inet.h  inotify.h  ipconfig.h  log.h  nat.h  network.h  notifier.h  plugin.h  provider.h  service.h  setting.h  storage.h  task.h  technology.h  vpn-dbus.h  wakeup_timer.h
connman/plugins/: bluetooth.c  bluetooth_legacy.c  clat.c  debuglog.c  ethernet.c  globalproxy.c  globalproxy.h  hybris-gps.c  iwd.c  jolla-gps.c  jolla-ofono.c  jolla-rfkill-hciwait.c  jolla-rfkill-hciwait.service  jolla-rfkill.c  jolla-signalpoll.c  jolla-usb.c  jolla_wakeup_timer.c  logcontrol.c  neard.c  ofono.c  pacrunner.c  sailfish-signalpoll.c  sailfish_access.c  sailfish_debuglog.c  sailfish_developer_mode.c  sailfish_ofono.c  sailfish_signalpoll.c  sailfish_signalpoll.h  sailfish_usb_tethering.c  sailfish_wakeup_timer.c  sailfish_wifi.c  session_policy_local.c  vpn.c  wifi.c
connman/src/: 6to4.c  access.c  agent-connman.c  agent.c  clock.c  config.c  connection.c  connman-dbus.conf  connman.h  connman.service.in  counter.c  detect.c  device.c  dhcp.c  dhcpv6.c  dnsproxy.c  firewall-iptables.c  firewall-nftables.c  firewall.c  fsid.c  inet.c  inotify.c  ipaddress.c  ipconfig.c  ippool.c  iptables-validate.c  iptables.c  ipv6pd.c  jolla-stats.c  log.c  login_manager.c  main.c  main.conf  manager.c  nat.c  network.c  notifier.c  ntp.c  peer.c  plugin.c  (+31 more)
connman/src/shared/: util.c  util.h
connman/test/: list-services  monitor-connman  monitor-services  monitor-vpn  p2p-on-supplicant  simple-agent  test-counter  test-session
connman/tools/: iptables-unit.c  session-test.c  stats-tool.c
connman/unit/: coverage  test-access.c  test-blacklist_monitor.c  test-clat.c  test-device.c  test-dnsproxy.c  test-firewall-iptables.c  test-firewall.c  test-globalproxy.c  test-ippool.c  test-jolla-wakeup-timer.c  test-sailfish_access.c  test-sailfish_datacounter.c  test-sailfish_datacounters.c  test-sailfish_datahistory.c  test-sailfish_developer_mode.c  test-sailfish_iptables_ext.c  test-sailfish_vpn_access.c  test-sailfish_wakeup_timer.c  test-service.c  test-storage.c  test-storage_helper.h  test-systemd_login.c  test-vpn-settings.c  test-vpn-util.c  test-vpn_access.c
connman/vpn/: access.c  access.h  connman-vpn.conf  connman-vpn.service.in  main.c  net.connman.vpn.service.in  vpn-agent.c  vpn-agent.h  vpn-config.c  vpn-ipconfig.c  vpn-provider.c  vpn-provider.h  vpn-rtnl.c  vpn-settings.c  vpn-util.c  vpn.h
connman/vpn/plugins/: l2tp.c  openconnect.c  openfortivpn.c  openvpn.c  pptp.c  sailfish_access.c  vpn-dbus-access.conf  vpn.c  vpn.h  vpnc.c  wireguard.c
doc/: clock-api.txt  config-format.txt  connman-firewall.config.5.in  connman-vpn-provider.config.5.in  connman.8.in  connman.conf.5.in  connmanctl.1.in  firewall-config-format.txt  globalproxy-config-format.txt  logcontrol-api.txt  manager-api.txt  plugin-api.txt  service-api.txt  storage-api.txt  technology-api.txt  vpn-agent-api.txt  vpn-config-format.txt  vpn-connection-api.txt  vpn-overview.txt
gdbus/: gdbus.h  mainloop.c
gdhcp/: client.c  common.h  server.c
gsupplicant/: gsupplicant.h  supplicant.c
gweb/: giognutls.c  gresolv.c  gresolv.h  gweb.c  gweb.h
include/: dbus.h  device.h  inet.h  iptables_ext.h  log.h  network.h  provider.h  rtnl.h  service.h  setting.h  storage.h  technology.h  timeserver.h
plugins/: blacklist_monitor.c  bluetooth.c  clat.c  ethernet.c  gadget.c  globalproxy.c  iwd.c  loopback.c  neard.c  ofono.c  sailfish_access.c  sailfish_gps.c  sailfish_ofono.c  sailfish_signalpoll.c  sailfish_signalpoll.h  sailfish_wifi.c  vpn.c  wifi.c
rpm/: 01-require-home-mount-to-be-present.conf  connman.changes  connman.spec  main.conf
scripts/: openvpn-script.c
src/: 6to4.c  access.c  agent-connman.c  agent.c  clock.c  config.c  connection.c  connman.h  connman.service.in  dbus.c  device.c  dhcp.c  dhcpv6.c  dns-systemd-resolved.c  dnsproxy.c  error.c  gateway.c  inet.c  ipaddress.c  ipconfig.c  ippool.c  iptables-validate.c  iptables.c  log.c  main.c  main.conf  manager.c  nat.c  network.c  ntp.c  peer.c  plugin.c  provider.c  proxy.c  resolver.c  rtnl.c  sailfish_datacounters.c  sailfish_datacounters_dbus_util.c  sailfish_datahistory.c  sailfish_datahistory_dbus.c  (+14 more)
src/shared/: mnlg.c  util.c
test/: monitor-connman  monitor-services  monitor-vpn  simple-agent  test-counter  test-session
tools/: dnsproxy-simple-test  dnsproxy-standalone.c  dnsproxy-test.c  ip6tables-test.c  iptables-test.c  iptables-unit.c  stats-tool.c  web-test.c  wispr.c
unit/: coverage  test-access.c  test-device.c  test-ippool.c  test-iptables.c  test-sailfish_access.c  test-sailfish_developer_mode.c  test-sailfish_iptables_ext.c  test-sailfish_vpn_access.c  test-sailfish_wakeup_timer.c  test-systemd_login.c  test_timenotify.c  test_timenotify.h
vpn/: connman-vpn.service.in  main.c  vpn-agent.c  vpn-agent.h  vpn-config.c  vpn-ipconfig.c  vpn-manager.c  vpn-polkit.policy  vpn-provider.c  vpn-provider.h  vpn-rtnl.c  vpn-rtnl.h  vpn-settings.c  vpn-util.c  vpn.h
vpn/plugins/: l2tp.c  openconnect.c  openvpn.c  pptp.c  vpn.c  vpn.h  vpnc.c  wireguard.c
